--- a/Cv2 camara test.ipynb
+++ b/Cv2 camara test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "ab24e366-1988-4732-bb98-0ddf20b0c7de",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "86823c0a-9623-4ff9-ad09-fae52d183e62",
    "metadata": {},
    "outputs": [],
@@ -38,10 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "194f6463-6c45-4dff-b5b6-b22565286dd5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cap.set(cv2.CAP_PROP_FRAME_WIDTH, 1280)\n",
     "cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 720)"
@@ -58,13 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "c1e902b3-dd76-45fa-a364-d72721ffdbca",
    "metadata": {},
    "outputs": [],
    "source": [
     "fourcc = cv2.VideoWriter_fourcc(\"m\", \"p\", \"4\", \"v\")\n",
-    "writer = cv2.VideoWriter(\"testrecording.mp4\", fourcc, 15.0, (1280, 720))"
+    "writer = cv2.VideoWriter(\"testrecording.mp4\", fourcc, 30, (1280, 720))"
    ]
   },
   {
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "69f3cfc8-4f38-4f8e-93b7-6307698b5699",
    "metadata": {},
    "outputs": [
