--- a/Calculation/Sedimentation calculation.ipynb
+++ b/Calculation/Sedimentation calculation.ipynb
@@ -75,8 +75,8 @@
     "plt.vlines(x=105, ymin=mean_v - sd_v +0.02, ymax=mean_v - 0.02, color=\"black\")\n",
     "\n",
     "plt.text(-8, 1.05, s=\"Mean velocity =\" + str(round(mean_v,2)) + \" \" + r\"$\\mathrm{\\mu m \\,s^{-1}}$\", color=\"tab:blue\")\n",
-    "plt.text(108, 1.27, s=r\"2$\\mathrm{\\sigma}$\", color=\"black\")\n",
-    "plt.text(108, 0.96, s=r\"2$\\mathrm{\\sigma}$\", color=\"black\")\n",
+    "plt.text(108, 1.27, s=r\"$\\mathrm{\\sigma}$\", color=\"black\")\n",
+    "plt.text(108, 0.96, s=r\"$\\mathrm{\\sigma}$\", color=\"black\")\n",
     "\n",
     "plt.xlim(np.min(xs)-10, np.max(xs)+10)\n",
     "plt.ylim(mean_v - 2*sd_v, mean_v + 2*sd_v)\n",
