--- a/Calculation/Sedimentation calculation.ipynb
+++ b/Calculation/Sedimentation calculation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e2fca53e-097f-45ab-aea7-b77e499c2eb2",
    "metadata": {
     "tags": []
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a48b9b42-2183-4578-a484-c7a12e8fd6d8",
    "metadata": {
     "tags": []
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "66ce9465-781f-463a-86d8-b8b3b6533b49",
    "metadata": {
     "tags": []
@@ -87,47 +87,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "7a2753c6-7ba5-4ff9-8af7-a57180661a0a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1.42486213])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-6.502384444168673e-06\n"
+     ]
     }
    ],
    "source": [
-    "popt"
+    "#theoretical value\n",
+    "m = 1.54E-14\n",
+    "r = (4.33/2)*1E-6\n",
+    "rho = 998\n",
+    "g = 9.82\n",
+    "eta = 1E-3\n",
+    "\n",
+    "v = ((m - rho * 4/3 * np.pi * r**3) * g) / (6 * np.pi * eta * r)\n",
+    "print(v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "f28b7e5d-a392-4c21-b6fc-da4ea52f6c0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3201855351198739"
+       "2.165e-06"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "sd_v"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
